--- a/_sass/utils/buttons.scss
+++ b/_sass/utils/buttons.scss
@@ -11,6 +11,6 @@
 .buttons {
   align-items: center;
   display: flex;
-  gap: $spacing-unit;
+  gap: $spacing-unit * 0.5;
   justify-content: center;
 }
