--- a/_sass/utils/custom.scss
+++ b/_sass/utils/custom.scss
@@ -8,3 +8,6 @@ $border-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
 // Publications logo
 $publication-image-width: 150px;
+
+// Publications button
+$publications-button-width: 75px;
